5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1582_2896.log
== SUBMITION (2019-03-14 17:43:14) 
-- CODE:
# Use este codigo como ponto de partida
jeysianne
# Leitura de valores de entrada
var = input("jeysianne:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.169857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 2, in <module>
    jeysianne
NameError: name 'jeysianne' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:43:30) 
-- CODE:
# Use este codigo como ponto de partida
jeysianne
# Leitura de valores de entrada
var = input("jeysianne:")

# Impressao de saidas
print(var.)
-- EXECUTION TIME:
0.206718
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 7
    print(var.)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:45:33) 
-- CODE:
# Use este codigo como ponto de partida
jeysianne
# Leitura de valores de entrada
var = input("jeysianne:")

# print(var)
print(var = input("jeysianne") )
-- EXECUTION TIME:
0.209487
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 2, in <module>
    jeysianne
NameError: name 'jeysianne' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:46:01) 
-- CODE:
# Use este codigo como ponto de partida
jeysianne
# Leitura de valores de entrada
var = input("jeysianne:")

#  impressao de saida
print(var = input("jeysianne") )
-- EXECUTION TIME:
0.139944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 2, in <module>
    jeysianne
NameError: name 'jeysianne' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:04:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura dealores de entrada
var = input("digite o nome: ")

#  impressao de saida
print(var )
-- EXECUTION TIME:
0.166739
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
